ssl with mutual auth and downgrade to java 11