@@ -5,9 +5,9 @@ package org.example;
 //import com.ibm.msg.client.jakarta.wmq.WMQConstants;
 //import jakarta.jms.*;
 
+//import com.github.marschall.legacycompatibilitysslsocketfactory.LegacyCompatibilitySSLSocketFactory;
 import com.ibm.mq.jms.MQConnectionFactory;
 import com.ibm.mq.jms.MQQueue;
-import com.ibm.mq.jms.MQQueueConnectionFactory;
 import com.ibm.msg.client.wmq.WMQConstants;
 import org.jetbrains.annotations.NotNull;
 
@@ -17,6 +17,7 @@ import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class QueueConnector {
 
@@ -40,7 +41,6 @@ public class QueueConnector {
 
             if (cfg.getSSLCipherSuite().isPresent()) {
                 cf.setSSLCipherSuite(cfg.getSSLCipherSuite().get());
-                cf.setSSLFipsRequired(false);
             }
 
         } else {
@@ -51,11 +51,25 @@ public class QueueConnector {
             }
             this.cf.setQueueManager(cfg.getQueueManager().orElseThrow(() -> new IllegalArgumentException("qmgr name required")));
         }
+
+        if (cfg.getTruststore().isPresent()) {
+            System.setProperty("javax.net.ssl.trustStore", cfg.getTruststore().get());
+            System.setProperty("javax.net.ssl.trustStorePassword", cfg.getTruststorePassword().orElseThrow(() -> new IllegalArgumentException("trust store password required")));
+        }
+
+        if (cfg.getKeystore().isPresent()) {
+            System.setProperty("javax.net.ssl.keyStore", cfg.getKeystore().get());
+            System.setProperty("javax.net.ssl.keyStorePassword", cfg.getKeystorePassword().orElseThrow(() -> new IllegalArgumentException("key store password required")));
+        }
     }
 
     public Connection startConnection() throws JMSException {
         String u = cfg.getMQUserName().orElseThrow(() -> new IllegalArgumentException("mq user id required"));
         String p = cfg.getMQUserPassword().orElseThrow(() -> new IllegalArgumentException("mq user password required"));
+
+        // java 21
+        // https://github.com/marschall/legacy-compatibility-ssl-socket-factory/tree/master
+//        this.cf.setSSLSocketFactory(new LegacyCompatibilitySSLSocketFactory());
 
         Connection c = this.cf.createConnection(u, p);
         c.start();
@@ -88,7 +102,10 @@ public class QueueConnector {
     }
 
     public List<Message> convertMessages(Session s, @NotNull List<String> textMessages) {
-        return textMessages.stream().map((tm) -> createTextMessage(s, tm)).toList();
+        // java 21
+//        return textMessages.stream().map((tm) -> createTextMessage(s, tm)).toList();
+        // java 11
+        return textMessages.stream().map((tm) -> createTextMessage(s, tm)).collect(Collectors.toList());
     }
 
     public void sendTextMessages(Connection c, Queue queue, List<String> textMessages, int commitCount) {
